--- a/templates/config_list.erb
+++ b/templates/config_list.erb
@@ -1,3 +1,3 @@
 # file managed by puppet
 # <%= @name %> for <%= @mlist %>
-<%= @variable %> = <%= @value %>
+<%= @variable %> = <%= (@value.respond_to? :dump) ? @value.dump : @value.to_s %>
